kimwitu++/src/Gen.boot/kimwy.output
Terminals which are not used

   T_PERCENTRVIEWVAR


Grammar

    0 $accept: specification $end

    1 dollarvar: T_DOLLARVAR

    2 id: T_ID

    3 integer: T_INT

    4 @1: /* empty */

    5 specification: @1 declarations

    6 declarations: /* empty */
    7             | declarations declaration

    8 declaration: phylumdeclaration
    9            | rwdeclaration
   10            | ac_function_definition
   11            | includedeclaration
   12            | unparsedeclaration
   13            | uviewdeclaration
   14            | rviewdeclaration
   15            | storageclassdeclaration
   16            | languagedeclaration
   17            | baseclassdeclaration

   18 baseclassdeclaration: T_BASECLASS id ':' baseclass_list ';'

   19 baseclass_list: id
   20               | baseclass_list ',' id

   21 @2: /* empty */

   22 phylumdeclaration: id storageoption ':' @2 productionblock Ccode_option ';'

   23 storageoption: /* empty */
   24              | '{' id '}'
   25              | '{' '!' id '}'
   26              | '{' error
   27              | '{' '!' error

   28 productionblock: /* empty */
   29                | T_LIST id
   30                | alternatives

   31 alternatives: alternative
   32             | alternatives '|' alternative
   33             | error
   34             | alternatives '|' error
   35             | alternatives error alternative

   36 @3: /* empty */

   37 @4: /* empty */

   38 alternative: id '(' @3 arguments @4 ')'
   39            | id '(' error

   40 arguments: /* empty */
   41          | arguments id
   42          | arguments T_ID ':' id

   43 Ccode_option: /* empty */
   44             | '{' attributes_option init_option '}'
   45             | '{' error

   46 attributes_option: /* empty */
   47                  | attributes_option attribute

   48 attribute: id id attribute_init_option ';'

   49 attribute_init_option: /* empty */

   50 @5: /* empty */

   51 attribute_init_option: '=' @5 Cexpression

   52 Cexpression: /* empty */
   53            | Cexpression Cexpression_elem

   54 Cexpression_elem: T_CEXPRESSION
   55                 | dollarvar
   56                 | '\n'
   57                 | '"' CexpressionDQ '"'
   58                 | ''' CexpressionSQ '''
   59                 | '(' Cexpression_inner ')'
   60                 | '[' Cexpression_inner ']'
   61                 | '"' error
   62                 | ''' error
   63                 | '(' error
   64                 | '[' error

   65 Cexpression_inner: /* empty */
   66                  | Cexpression_inner Cexpression_elem_inner

   67 Cexpression_elem_inner: Cexpression_elem
   68                       | ','

   69 quote_or_error: '"'
   70               | error

   71 CexpressionDQ: /* empty */
   72              | CexpressionDQ CexpressionDQ_elem

   73 CexpressionDQ_elem: T_CEXPRESSION
   74                   | '\n'

   75 CexpressionSQ: /* empty */
   76              | CexpressionSQ CexpressionSQ_elem

   77 CexpressionSQ_elem: T_CEXPRESSION
   78                   | '\n'

   79 idCexpressions: idCexpression
   80               | idCexpressions ',' idCexpression

   81 @6: /* empty */

   82 @7: /* empty */

   83 idCexpression: id @6 Cexpression @7

   84 withCexpression: Cexpression

   85 withCexpressions: withCexpression

   86 @8: /* empty */

   87 withCexpressions: withCexpressions ',' @8 withCexpression

   88 @9: /* empty */

   89 @10: /* empty */

   90 MainCbody: '{' @9 MainCBodycontinuation @10 '}'

   91 @11: /* empty */

   92 @12: /* empty */

   93 MainCbodyinC: '{' @11 MainCBodycontinuation @12 '}'

   94 MainCBodycontinuation: Ctext
   95                      | withcases
   96                      | error

   97 @13: /* empty */

   98 @14: /* empty */

   99 Cbody: '{' @13 Ctext @14 '}'

  100 Ctext: /* empty */

  101 @15: /* empty */

  102 Ctext: Ctext @15 Ctext_elem

  103 Ctext_elem: T_CLINE
  104           | dollarvar
  105           | '\n'
  106           | T_CNEWLINES

  107 @16: /* empty */

  108 Ctext_elem: '"' @16 CexpressionDQ '"'

  109 @17: /* empty */

  110 Ctext_elem: ''' @17 CexpressionSQ '''
  111           | Cbody

  112 @18: /* empty */

  113 Ctext_elem: T_FOREACH @18 foreach_continuation

  114 @19: /* empty */

  115 @20: /* empty */

  116 @21: /* empty */

  117 Ctext_elem: T_WITH @19 '(' @20 withCexpressions @21 ')' '{' withcases '}'

  118 @22: /* empty */

  119 @23: /* empty */

  120 foreach_continuation: '(' patternchain ';' @22 idCexpressions ')' MainCbodyinC @23 foreach_end_continuation

  121 foreach_end_continuation: /* empty */

  122 @24: /* empty */

  123 @25: /* empty */

  124 foreach_end_continuation: T_FOREACH_AFTER @24 '(' patternchain @25 ')' MainCbodyinC

  125 init_option: /* empty */
  126            | Cbody

  127 @26: /* empty */

  128 includedeclaration: T_INCLUDESTART includefiles_option @26 T_ENDOFINCLUDESTART T_INCLUDEEND
  129                   | T_INCLUDESTART error T_INCLUDEEND

  130 includefiles_option: /* empty */
  131                    | includefiles

  132 includefiles: T_ID
  133             | includefiles T_ID

  134 @27: /* empty */

  135 rwdeclaration: outmostpatterns T_ARROW @27 rwclauses semi_or_error

  136 rwclauses: rwclause
  137          | rwclauses rwclause

  138 rwclause: '<' useviewnames ':' term '>'

  139 semi_or_error: ';'
  140              | error

  141 patternchains: patternchain
  142              | patternchains ',' patternchain

  143 patternchain: patternchainitem_lineinfo
  144             | patternchain '&' patternchainitem_lineinfo

  145 @28: /* empty */

  146 patternchainitem_lineinfo: @28 patternchainitem

  147 patternchainitem: outmostpattern
  148                 | '(' patternchains ')'
  149                 | '$' id

  150 outmostpatterns: outmostpattern
  151                | outmostpatterns ',' outmostpattern
  152                | error
  153                | outmostpatterns error
  154                | outmostpatterns ',' error
  155                | outmostpatterns error outmostpattern

  156 outmostpattern: id provideds
  157               | id '(' patternsoption ')' provideds
  158               | id '=' outmostpattern
  159               | '*' provideds
  160               | T_DEFAULT provideds

  161 provideds: /* empty */

  162 @29: /* empty */

  163 @30: /* empty */

  164 provideds: T_PROVIDED '(' @29 Cexpression @30 ')'

  165 pattern: id
  166        | id '(' patternsoption ')'
  167        | '*'
  168        | T_DEFAULT
  169        | id '=' pattern

  170 @31: /* empty */

  171 pattern: '"' @31 CexpressionDQ '"'
  172        | integer

  173 patternsoption: /* empty */
  174               | patterns

  175 patterns: pattern
  176         | patterns ',' pattern
  177         | error
  178         | patterns error
  179         | patterns ',' error
  180         | patterns error pattern

  181 term: id
  182     | id '(' termsoption ')'
  183     | term T_ARROW id '(' termsoption ')'
  184     | term '.' id '(' termsoption ')'
  185     | term T_ARROW id
  186     | term '.' id

  187 @32: /* empty */

  188 term: ''' @32 CexpressionSQ '''

  189 @33: /* empty */

  190 term: '"' @33 CexpressionDQ '"'
  191     | integer

  192 termsoption: /* empty */
  193            | terms

  194 terms: term
  195      | terms ',' term
  196      | error
  197      | terms error
  198      | terms ',' error
  199      | terms error term

  200 withcases: withcase
  201          | withcases withcase

  202 withcase: patternchains ':' Cbody

  203 @34: /* empty */

  204 unparsedeclaration: outmostpatterns T_ARROW @34 unparseclauses ';'
  205                   | outmostpatterns T_ARROW error ';'

  206 unparseclauses: unparseclause
  207               | unparseclauses unparseclause

  208 unparseclause: '[' useviewnames ':' unparseitems ']'
  209              | '[' useviewnames ':' error
  210              | '[' error ':' unparseitems ']'
  211              | '[' error ':' error
  212              | '[' error

  213 useviewnames: /* empty */
  214             | useviewnames id

  215 unparseitems: /* empty */
  216             | unparseitems unparseitem

  217 @35: /* empty */

  218 @36: /* empty */

  219 unparseitem: languageoption '"' @35 CexpressionDQ quote_or_error @36 viewnameoption
  220            | languageoption unpsubterm viewnameoption
  221            | languageoption Cbody
  222            | languageoption T_UNPBLOCKSTART unparseitems T_UNPBLOCKEND

  223 @37: /* empty */

  224 @38: /* empty */

  225 unparseitem: T_PERCENTUVIEWVAR id id @37 Cexpression @38 ';'

  226 unpsubterm: id
  227           | dollarvar
  228           | id unpattributes
  229           | dollarvar unpattributes
  230           | '(' id ')' id

  231 unpattributes: unpattribute
  232              | unpattributes unpattribute

  233 unpattribute: T_ARROW id
  234             | T_ARROW error

  235 viewnameoption: /* empty */
  236               | ':' id
  237               | ':' error

  238 uviewdeclaration: T_PERCENTUVIEW defuviewnames ';'
  239                 | T_PERCENTUVIEW error ';'

  240 defuviewnames: id
  241              | '(' id ')'
  242              | defuviewnames id
  243              | defuviewnames '(' id ')'
  244              | defuviewnames ',' id
  245              | defuviewnames ',' '(' id ')'
  246              | defuviewnames error
  247              | defuviewnames ',' error

  248 rviewdeclaration: T_PERCENTRVIEW defrviewnames ';'
  249                 | T_PERCENTRVIEW error ';'

  250 defrviewnames: id
  251              | '(' id ')'
  252              | defrviewnames id
  253              | defrviewnames '(' id ')'
  254              | defrviewnames ',' id
  255              | defrviewnames ',' '(' id ')'
  256              | defrviewnames error
  257              | defrviewnames ',' error

  258 storageclassdeclaration: T_PERCENTSTORAGECLASS defstorageclasses ';'
  259                        | T_PERCENTSTORAGECLASS error ';'

  260 defstorageclasses: id
  261                  | defstorageclasses id
  262                  | defstorageclasses ',' id
  263                  | defstorageclasses error
  264                  | defstorageclasses ',' error

  265 ac_function_definition: ac_declaration_specifiers ac_fn_declarator ac_compound_statement
  266                       | id T_COLONCOLON T_OPERATOR id '(' ')' ac_opt_const ac_compound_statement
  267                       | T_CONSTRUCTOR id '(' ac_parameter_type_list ')' ac_opt_base_init_list ac_compound_statement
  268                       | T_DESTRUCTOR opt_virtual id '(' ')' ac_compound_statement
  269                       | T_MEMBER ac_member_declaration_specifiers ac_member_declarator ac_opt_member_init ';'
  270                       | T_ATTR ac_member_declaration_specifiers ac_member_declarator ac_opt_member_init ';'

  271 ac_opt_base_init_list: /* empty */
  272                      | ':' ac_base_init_list

  273 ac_base_init_list: ac_base_init
  274                  | ac_base_init_list ',' ac_base_init

  275 ac_base_init: id '(' ac_constant_expression_init_list ')'

  276 ac_default_arg_init: /* empty */
  277                    | '=' ac_constant_expression

  278 ac_opt_member_init: /* empty */
  279                   | '=' ac_constant_expression
  280                   | '(' ac_constant_expression ')'

  281 ac_declaration_specifiers: ac_type_specifier
  282                          | ac_storage_class_specifier ac_type_specifier
  283                          | ac_type_qualifier ac_type_specifier
  284                          | ac_storage_class_specifier ac_type_qualifier ac_type_specifier

  285 ac_member_declaration_specifiers: ac_type_specifier
  286                                 | ac_member_storage_class_specifier ac_type_specifier
  287                                 | ac_type_qualifier ac_type_specifier
  288                                 | ac_member_storage_class_specifier ac_type_qualifier ac_type_specifier

  289 ac_storage_class_specifier: T_AUTO
  290                           | T_REGISTER
  291                           | T_STATIC
  292                           | T_EXTERN
  293                           | T_TYPEDEF
  294                           | T_VIRTUAL

  295 ac_member_storage_class_specifier: T_STATIC

  296 opt_virtual: /* empty */
  297            | T_VIRTUAL

  298 ac_type_specifier: id

  299 ac_type_qualifier: T_CONST
  300                  | T_VOLATILE
  301                  | T_UNSIGNED

  302 ac_fn_declarator: ac_direct_fn_declarator
  303                 | ac_pointer ac_direct_fn_declarator
  304                 | '&' ac_direct_fn_declarator
  305                 | ac_pointer '&' ac_direct_fn_declarator

  306 ac_declarator: ac_direct_declarator
  307              | ac_pointer ac_direct_declarator
  308              | '&' ac_direct_declarator
  309              | ac_pointer '&' ac_direct_declarator

  310 ac_member_declarator: ac_direct_member_declarator
  311                     | ac_pointer ac_direct_member_declarator
  312                     | '&' ac_direct_member_declarator
  313                     | ac_pointer '&' ac_direct_member_declarator

  314 ac_pointer_declarator: ac_pointer ac_direct_declarator
  315                      | ac_pointer '&' ac_direct_declarator

  316 ac_direct_declarator: ac_identifier
  317                     | '(' ac_pointer_declarator ')'
  318                     | ac_direct_declarator '[' ac_constant_expression_option ']'
  319                     | ac_direct_declarator '(' ac_parameter_type_list ')'

  320 ac_direct_member_declarator: id T_COLONCOLON id ac_constant_expression_list

  321 ac_constant_expression_list: /* empty */
  322                            | ac_constant_expression_list '[' ac_constant_expression ']'

  323 ac_constant_expression_init_list: ac_constant_expression
  324                                 | ac_constant_expression_init_list ',' ac_constant_expression

  325 ac_direct_fn_declarator: ac_qualifier '(' ac_parameter_type_list ')' ac_opt_const
  326                        | ac_qualifier '(' error ')' ac_opt_const

  327 ac_qualifier: ac_fn_declarator_id
  328             | ac_qualifier T_COLONCOLON ac_fn_declarator_id

  329 ac_fn_declarator_id: id
  330                    | T_OPERATOR T_OPNAME

  331 ac_opt_const: /* empty */
  332             | T_CONST

  333 ac_pointer: '*'
  334           | '*' ac_type_qualifier_list
  335           | '*' ac_pointer
  336           | '*' ac_type_qualifier_list ac_pointer

  337 ac_type_qualifier_list: ac_type_qualifier
  338                       | ac_type_qualifier_list ac_type_qualifier

  339 ac_parameter_type_list: /* empty */
  340                       | T_DOTDOTDOT
  341                       | ac_parameter_list
  342                       | ac_parameter_list T_DOTDOTDOT
  343                       | ac_parameter_list ',' T_DOTDOTDOT

  344 ac_parameter_list: ac_parameter_declaration
  345                  | ac_parameter_list ',' ac_parameter_declaration

  346 ac_parameter_declaration: ac_declaration_specifiers ac_declarator ac_default_arg_init
  347                         | ac_declaration_specifiers ac_abstract_declarator ac_default_arg_init

  348 ac_abstract_declarator: ac_pointer
  349                       | ac_direct_abstract_declarator
  350                       | ac_pointer ac_direct_abstract_declarator

  351 ac_direct_abstract_declarator: '(' ac_abstract_declarator ')'
  352                              | ac_direct_abstract_declarator '[' ac_constant_expression_option ']'
  353                              | '[' ac_constant_expression_option ']'
  354                              | ac_direct_abstract_declarator '(' ac_parameter_type_list ')'
  355                              | '(' ac_parameter_type_list ')'

  356 ac_constant_expression_option: ac_constant_expression

  357 @39: /* empty */

  358 ac_constant_expression: @39 Cexpression

  359 ac_identifier: id
  360              | '$' id

  361 ac_compound_statement: MainCbody

  362 @40: /* empty */

  363 ac_compound_statement: error ';' @40 ac_compound_statement

  364 languageoption: '<' languageoptions '>' ':'
  365               | /* empty */

  366 languageoptions: id
  367                | languageoptions ',' id
  368                | error
  369                | languageoptions error
  370                | languageoptions ',' error
  371                | languageoptions error id

  372 languagedeclaration: T_PERCENTLANGUAGE deflanguagenames ';'
  373                    | T_PERCENTLANGUAGE error ';'

  374 deflanguagenames: id
  375                 | deflanguagenames id
  376                 | deflanguagenames ',' id
  377                 | deflanguagenames error
  378                 | deflanguagenames ',' error


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 56 74 78 105
'!' (33) 25 27
'"' (34) 57 61 69 108 171 190 219
'$' (36) 149 360
'&' (38) 144 304 305 308 309 312 313 315
''' (39) 58 62 110 188
'(' (40) 38 39 59 63 117 120 124 148 157 164 166 182 183 184 230 241
    243 245 251 253 255 266 267 268 275 280 317 319 325 326 351 354
    355
')' (41) 38 59 117 120 124 148 157 164 166 182 183 184 230 241 243
    245 251 253 255 266 267 268 275 280 317 319 325 326 351 354 355
'*' (42) 159 167 333 334 335 336
',' (44) 20 68 80 87 142 151 154 176 179 195 198 244 245 247 254 255
    257 262 264 274 324 343 345 367 370 376 378
'.' (46) 184 186
':' (58) 18 22 42 138 202 208 209 210 211 236 237 272 364
';' (59) 18 22 48 120 139 204 205 225 238 239 248 249 258 259 269 270
    363 372 373
'<' (60) 138 364
'=' (61) 51 158 169 277 279
'>' (62) 138 364
'[' (91) 60 64 208 209 210 211 212 318 322 352 353
']' (93) 60 208 210 318 322 352 353
'{' (123) 24 25 26 27 44 45 90 93 99 117
'|' (124) 32 34
'}' (125) 24 25 44 90 93 99 117
error (256) 26 27 33 34 35 39 45 61 62 63 64 70 96 129 140 152 153
    154 155 177 178 179 180 196 197 198 199 205 209 210 211 212 234
    237 239 246 247 249 256 257 259 263 264 326 363 368 369 370 371
    373 377 378
T_ID (258) 2 42 132 133
T_OPNAME (259) 330
T_INT (260) 3
T_CNEWLINES (261) 106
T_CLINE (262) 103
T_CEXPRESSION (263) 54 73 77
T_DOLLARVAR (264) 1
T_INCLUDEEND (265) 128 129
T_INCLUDESTART (266) 128 129
T_ENDOFINCLUDESTART (267) 128
T_LIST (268) 29
T_ARROW (269) 135 183 185 204 205 233 234
T_PROVIDED (270) 164
T_STATIC (271) 291 295
T_WITH (272) 117
T_FOREACH (273) 113
T_FOREACH_AFTER (274) 124
T_DEFAULT (275) 160 168
T_UNPBLOCKSTART (276) 222
T_UNPBLOCKEND (277) 222
T_PERCENTRVIEW (278) 248 249
T_PERCENTRVIEWVAR (279)
T_PERCENTUVIEW (280) 238 239
T_PERCENTUVIEWVAR (281) 225
T_PERCENTSTORAGECLASS (282) 258 259
T_PERCENTLANGUAGE (283) 372 373
T_AUTO (284) 289
T_REGISTER (285) 290
T_EXTERN (286) 292
T_TYPEDEF (287) 293
T_CONST (288) 299 332
T_VOLATILE (289) 300
T_UNSIGNED (290) 301
T_VIRTUAL (291) 294 297
T_DOTDOTDOT (292) 340 342 343
T_COLONCOLON (293) 266 320 328
T_OPERATOR (294) 266 330
T_CONSTRUCTOR (295) 267
T_DESTRUCTOR (296) 268
T_MEMBER (297) 269
T_ATTR (298) 270
T_BASECLASS (299) 18


Nonterminals, with rules where they appear

$accept (66)
    on left: 0
dollarvar (67)
    on left: 1, on right: 55 104 227 229
id (68)
    on left: 2, on right: 18 19 20 22 24 25 29 38 39 41 42 48 83 149
    156 157 158 165 166 169 181 182 183 184 185 186 214 225 226 228
    230 233 236 240 241 242 243 244 245 250 251 252 253 254 255 260
    261 262 266 267 268 275 298 320 329 359 360 366 367 371 374 375
    376
integer (69)
    on left: 3, on right: 172 191
specification (70)
    on left: 5, on right: 0
@1 (71)
    on left: 4, on right: 5
declarations (72)
    on left: 6 7, on right: 5 7
declaration (73)
    on left: 8 9 10 11 12 13 14 15 16 17, on right: 7
baseclassdeclaration (74)
    on left: 18, on right: 17
baseclass_list (75)
    on left: 19 20, on right: 18 20
phylumdeclaration (76)
    on left: 22, on right: 8
@2 (77)
    on left: 21, on right: 22
storageoption (78)
    on left: 23 24 25 26 27, on right: 22
productionblock (79)
    on left: 28 29 30, on right: 22
alternatives (80)
    on left: 31 32 33 34 35, on right: 30 32 34 35
alternative (81)
    on left: 38 39, on right: 31 32 35
@3 (82)
    on left: 36, on right: 38
@4 (83)
    on left: 37, on right: 38
arguments (84)
    on left: 40 41 42, on right: 38 41 42
Ccode_option (85)
    on left: 43 44 45, on right: 22
attributes_option (86)
    on left: 46 47, on right: 44 47
attribute (87)
    on left: 48, on right: 47
attribute_init_option (88)
    on left: 49 51, on right: 48
@5 (89)
    on left: 50, on right: 51
Cexpression (90)
    on left: 52 53, on right: 51 53 83 84 164 225 358
Cexpression_elem (91)
    on left: 54 55 56 57 58 59 60 61 62 63 64, on right: 53 67
Cexpression_inner (92)
    on left: 65 66, on right: 59 60 66
Cexpression_elem_inner (93)
    on left: 67 68, on right: 66
quote_or_error (94)
    on left: 69 70, on right: 219
CexpressionDQ (95)
    on left: 71 72, on right: 57 72 108 171 190 219
CexpressionDQ_elem (96)
    on left: 73 74, on right: 72
CexpressionSQ (97)
    on left: 75 76, on right: 58 76 110 188
CexpressionSQ_elem (98)
    on left: 77 78, on right: 76
idCexpressions (99)
    on left: 79 80, on right: 80 120
idCexpression (100)
    on left: 83, on right: 79 80
@6 (101)
    on left: 81, on right: 83
@7 (102)
    on left: 82, on right: 83
withCexpression (103)
    on left: 84, on right: 85 87
withCexpressions (104)
    on left: 85 87, on right: 87 117
@8 (105)
    on left: 86, on right: 87
MainCbody (106)
    on left: 90, on right: 361
@9 (107)
    on left: 88, on right: 90
@10 (108)
    on left: 89, on right: 90
MainCbodyinC (109)
    on left: 93, on right: 120 124
@11 (110)
    on left: 91, on right: 93
@12 (111)
    on left: 92, on right: 93
MainCBodycontinuation (112)
    on left: 94 95 96, on right: 90 93
Cbody (113)
    on left: 99, on right: 111 126 202 221
@13 (114)
    on left: 97, on right: 99
@14 (115)
    on left: 98, on right: 99
Ctext (116)
    on left: 100 102, on right: 94 99 102
@15 (117)
    on left: 101, on right: 102
Ctext_elem (118)
    on left: 103 104 105 106 108 110 111 113 117, on right: 102
@16 (119)
    on left: 107, on right: 108
@17 (120)
    on left: 109, on right: 110
@18 (121)
    on left: 112, on right: 113
@19 (122)
    on left: 114, on right: 117
@20 (123)
    on left: 115, on right: 117
@21 (124)
    on left: 116, on right: 117
foreach_continuation (125)
    on left: 120, on right: 113
@22 (126)
    on left: 118, on right: 120
@23 (127)
    on left: 119, on right: 120
foreach_end_continuation (128)
    on left: 121 124, on right: 120
@24 (129)
    on left: 122, on right: 124
@25 (130)
    on left: 123, on right: 124
init_option (131)
    on left: 125 126, on right: 44
includedeclaration (132)
    on left: 128 129, on right: 11
@26 (133)
    on left: 127, on right: 128
includefiles_option (134)
    on left: 130 131, on right: 128
includefiles (135)
    on left: 132 133, on right: 131 133
rwdeclaration (136)
    on left: 135, on right: 9
@27 (137)
    on left: 134, on right: 135
rwclauses (138)
    on left: 136 137, on right: 135 137
rwclause (139)
    on left: 138, on right: 136 137
semi_or_error (140)
    on left: 139 140, on right: 135
patternchains (141)
    on left: 141 142, on right: 142 148 202
patternchain (142)
    on left: 143 144, on right: 120 124 141 142 144
patternchainitem_lineinfo (143)
    on left: 146, on right: 143 144
@28 (144)
    on left: 145, on right: 146
patternchainitem (145)
    on left: 147 148 149, on right: 146
outmostpatterns (146)
    on left: 150 151 152 153 154 155, on right: 135 151 153 154 155
    204 205
outmostpattern (147)
    on left: 156 157 158 159 160, on right: 147 150 151 155 158
provideds (148)
    on left: 161 164, on right: 156 157 159 160
@29 (149)
    on left: 162, on right: 164
@30 (150)
    on left: 163, on right: 164
pattern (151)
    on left: 165 166 167 168 169 171 172, on right: 169 175 176 180
@31 (152)
    on left: 170, on right: 171
patternsoption (153)
    on left: 173 174, on right: 157 166
patterns (154)
    on left: 175 176 177 178 179 180, on right: 174 176 178 179 180
term (155)
    on left: 181 182 183 184 185 186 188 190 191, on right: 138 183
    184 185 186 194 195 199
@32 (156)
    on left: 187, on right: 188
@33 (157)
    on left: 189, on right: 190
termsoption (158)
    on left: 192 193, on right: 182 183 184
terms (159)
    on left: 194 195 196 197 198 199, on right: 193 195 197 198 199
withcases (160)
    on left: 200 201, on right: 95 117 201
withcase (161)
    on left: 202, on right: 200 201
unparsedeclaration (162)
    on left: 204 205, on right: 12
@34 (163)
    on left: 203, on right: 204
unparseclauses (164)
    on left: 206 207, on right: 204 207
unparseclause (165)
    on left: 208 209 210 211 212, on right: 206 207
useviewnames (166)
    on left: 213 214, on right: 138 208 209 214
unparseitems (167)
    on left: 215 216, on right: 208 210 216 222
unparseitem (168)
    on left: 219 220 221 222 225, on right: 216
@35 (169)
    on left: 217, on right: 219
@36 (170)
    on left: 218, on right: 219
@37 (171)
    on left: 223, on right: 225
@38 (172)
    on left: 224, on right: 225
unpsubterm (173)
    on left: 226 227 228 229 230, on right: 220
unpattributes (174)
    on left: 231 232, on right: 228 229 232
unpattribute (175)
    on left: 233 234, on right: 231 232
viewnameoption (176)
    on left: 235 236 237, on right: 219 220
uviewdeclaration (177)
    on left: 238 239, on right: 13
defuviewnames (178)
    on left: 240 241 242 243 244 245 246 247, on right: 238 242 243
    244 245 246 247
rviewdeclaration (179)
    on left: 248 249, on right: 14
defrviewnames (180)
    on left: 250 251 252 253 254 255 256 257, on right: 248 252 253
    254 255 256 257
storageclassdeclaration (181)
    on left: 258 259, on right: 15
defstorageclasses (182)
    on left: 260 261 262 263 264, on right: 258 261 262 263 264
ac_function_definition (183)
    on left: 265 266 267 268 269 270, on right: 10
ac_opt_base_init_list (184)
    on left: 271 272, on right: 267
ac_base_init_list (185)
    on left: 273 274, on right: 272 274
ac_base_init (186)
    on left: 275, on right: 273 274
ac_default_arg_init (187)
    on left: 276 277, on right: 346 347
ac_opt_member_init (188)
    on left: 278 279 280, on right: 269 270
ac_declaration_specifiers (189)
    on left: 281 282 283 284, on right: 265 346 347
ac_member_declaration_specifiers (190)
    on left: 285 286 287 288, on right: 269 270
ac_storage_class_specifier (191)
    on left: 289 290 291 292 293 294, on right: 282 284
ac_member_storage_class_specifier (192)
    on left: 295, on right: 286 288
opt_virtual (193)
    on left: 296 297, on right: 268
ac_type_specifier (194)
    on left: 298, on right: 281 282 283 284 285 286 287 288
ac_type_qualifier (195)
    on left: 299 300 301, on right: 283 284 287 288 337 338
ac_fn_declarator (196)
    on left: 302 303 304 305, on right: 265
ac_declarator (197)
    on left: 306 307 308 309, on right: 346
ac_member_declarator (198)
    on left: 310 311 312 313, on right: 269 270
ac_pointer_declarator (199)
    on left: 314 315, on right: 317
ac_direct_declarator (200)
    on left: 316 317 318 319, on right: 306 307 308 309 314 315 318
    319
ac_direct_member_declarator (201)
    on left: 320, on right: 310 311 312 313
ac_constant_expression_list (202)
    on left: 321 322, on right: 320 322
ac_constant_expression_init_list (203)
    on left: 323 324, on right: 275 324
ac_direct_fn_declarator (204)
    on left: 325 326, on right: 302 303 304 305
ac_qualifier (205)
    on left: 327 328, on right: 325 326 328
ac_fn_declarator_id (206)
    on left: 329 330, on right: 327 328
ac_opt_const (207)
    on left: 331 332, on right: 266 325 326
ac_pointer (208)
    on left: 333 334 335 336, on right: 303 305 307 309 311 313 314
    315 335 336 348 350
ac_type_qualifier_list (209)
    on left: 337 338, on right: 334 336 338
ac_parameter_type_list (210)
    on left: 339 340 341 342 343, on right: 267 319 325 354 355
ac_parameter_list (211)
    on left: 344 345, on right: 341 342 343 345
ac_parameter_declaration (212)
    on left: 346 347, on right: 344 345
ac_abstract_declarator (213)
    on left: 348 349 350, on right: 347 351
ac_direct_abstract_declarator (214)
    on left: 351 352 353 354 355, on right: 349 350 352 354
ac_constant_expression_option (215)
    on left: 356, on right: 318 352 353
ac_constant_expression (216)
    on left: 358, on right: 277 279 280 322 323 324 356
@39 (217)
    on left: 357, on right: 358
ac_identifier (218)
    on left: 359 360, on right: 316
ac_compound_statement (219)
    on left: 361 363, on right: 265 266 267 268 363
@40 (220)
    on left: 362, on right: 363
languageoption (221)
    on left: 364 365, on right: 219 220 221 222
languageoptions (222)
    on left: 366 367 368 369 370 371, on right: 364 367 369 370 371
languagedeclaration (223)
    on left: 372 373, on right: 16
deflanguagenames (224)
    on left: 374 375 376 377 378, on right: 372 375 376 377 378


state 0

    0 $accept: . specification $end

    $default  reduce using rule 4 (@1)

    specification  go to state 1
    @1             go to state 2


state 1

    0 $accept: specification . $end

    $end  shift, and go to state 3


state 2

    5 specification: @1 . declarations

    $default  reduce using rule 6 (declarations)

    declarations  go to state 4


state 3

    0 $accept: specification $end .

    $default  accept


state 4

    5 specification: @1 declarations .
    7 declarations: declarations . declaration

    error                  shift, and go to state 5
    T_ID                   shift, and go to state 6
    T_INCLUDESTART         shift, and go to state 7
    T_STATIC               shift, and go to state 8
    T_DEFAULT              shift, and go to state 9
    T_PERCENTRVIEW         shift, and go to state 10
    T_PERCENTUVIEW         shift, and go to state 11
    T_PERCENTSTORAGECLASS  shift, and go to state 12
    T_PERCENTLANGUAGE      shift, and go to state 13
    T_AUTO                 shift, and go to state 14
    T_REGISTER             shift, and go to state 15
    T_EXTERN               shift, and go to state 16
    T_TYPEDEF              shift, and go to state 17
    T_CONST                shift, and go to state 18
    T_VOLATILE             shift, and go to state 19
    T_UNSIGNED             shift, and go to state 20
    T_VIRTUAL              shift, and go to state 21
    T_CONSTRUCTOR          shift, and go to state 22
    T_DESTRUCTOR           shift, and go to state 23
    T_MEMBER               shift, and go to state 24
    T_ATTR                 shift, and go to state 25
    T_BASECLASS            shift, and go to state 26
    '*'                    shift, and go to state 27

    $end  reduce using rule 5 (specification)

    id                          go to state 28
    declaration                 go to state 29
    baseclassdeclaration        go to state 30
    phylumdeclaration           go to state 31
    includedeclaration          go to state 32
    rwdeclaration               go to state 33
    outmostpatterns             go to state 34
    outmostpattern              go to state 35
    unparsedeclaration          go to state 36
    uviewdeclaration            go to state 37
    rviewdeclaration            go to state 38
    storageclassdeclaration     go to state 39
    ac_function_definition      go to state 40
    ac_declaration_specifiers   go to state 41
    ac_storage_class_specifier  go to state 42
    ac_type_specifier           go to state 43
    ac_type_qualifier           go to state 44
    languagedeclaration         go to state 45


state 5

  152 outmostpatterns: error .

    $default  reduce using rule 152 (outmostpatterns)


state 6

    2 id: T_ID .

    $default  reduce using rule 2 (id)


state 7

  128 includedeclaration: T_INCLUDESTART . includefiles_option @26 T_ENDOFINCLUDESTART T_INCLUDEEND
  129                   | T_INCLUDESTART . error T_INCLUDEEND

    error  shift, and go to state 46
    T_ID   shift, and go to state 47

    T_ENDOFINCLUDESTART  reduce using rule 130 (includefiles_option)

    includefiles_option  go to state 48
    includefiles         go to state 49


state 8

  291 ac_storage_class_specifier: T_STATIC .

    $default  reduce using rule 291 (ac_storage_class_specifier)


state 9

  160 outmostpattern: T_DEFAULT . provideds

    T_PROVIDED  shift, and go to state 50

    $default  reduce using rule 161 (provideds)

    provideds  go to state 51


state 10

  248 rviewdeclaration: T_PERCENTRVIEW . defrviewnames ';'
  249                 | T_PERCENTRVIEW . error ';'

    error  shift, and go to state 52
    T_ID   shift, and go to state 6
    '('    shift, and go to state 53

    id             go to state 54
    defrviewnames  go to state 55


state 11

  238 uviewdeclaration: T_PERCENTUVIEW . defuviewnames ';'
  239                 | T_PERCENTUVIEW . error ';'

    error  shift, and go to state 56
    T_ID   shift, and go to state 6
    '('    shift, and go to state 57

    id             go to state 58
    defuviewnames  go to state 59


state 12

  258 storageclassdeclaration: T_PERCENTSTORAGECLASS . defstorageclasses ';'
  259                        | T_PERCENTSTORAGECLASS . error ';'

    error  shift, and go to state 60
    T_ID   shift, and go to state 6

    id                 go to state 61
    defstorageclasses  go to state 62


state 13

  372 languagedeclaration: T_PERCENTLANGUAGE . deflanguagenames ';'
  373                    | T_PERCENTLANGUAGE . error ';'

    error  shift, and go to state 63
    T_ID   shift, and go to state 6

    id                go to state 64
    deflanguagenames  go to state 65


state 14

  289 ac_storage_class_specifier: T_AUTO .

    $default  reduce using rule 289 (ac_storage_class_specifier)


state 15

  290 ac_storage_class_specifier: T_REGISTER .

    $default  reduce using rule 290 (ac_storage_class_specifier)


state 16

  292 ac_storage_class_specifier: T_EXTERN .

    $default  reduce using rule 292 (ac_storage_class_specifier)


state 17
